# PeerFold

./: .gitignore  LICENSE  README.md  peerfold.py  pyproject.toml
.github/workflows/: backfill-pypi.yml  ci.yml  release.yml
assets/: PeerFold.icns
docs/: index.html  install.ps1  install.sh  peerfold.py
scripts/: backfill_pypi.py  build_executable.py  build_icon.py  capture_screenshot.py  check_release_parity.py  check_versions.py  debug_export_dialog.py  make_demo_pdf.py  make_sample_pdf.py  package_release.py  peerfold.py  sync_versions.py
scripts/macos/: peerfold_launcher.m
src/papertrail/: __init__.py  __main__.py  cli.py  core.py
src/papertrail/static/: app.css  app.js  index.html
src/peerfold/: __init__.py  __main__.py  app_host.py  cli.py  comment_export.py  core.py  handlers.py  icons.py  links.py  macos_events.py  macos_menu.py  native_dialogs.py  recent_files.py  ui.py  updater.py
src/peerfold/static/: app.css  app.js  index.html
tests/: conftest.py  test_app_host.py  test_comment_export.py  test_core.py  test_handlers.py  test_links.py  test_native_dialogs.py  test_packaging.py  test_peerfold_launcher.py  test_recent_files.py  test_ui.py  test_updater.py  test_versions.py
